# darkord-sls-auth

./: .gitignore  Cargo.toml  README.md  install_layers_requirements.py  package-lock.json  package.json  requirements.txt  serverless-compose.yml  serverless.api.yml  serverless.db.yml  serverless.sf.yml  serverless.yml
auth-lib/: auth_attempt.rs  auth_constants.rs  auth_enums.rs  auth_error.rs  auth_jwt.rs  auth_rbac.rs  auth_sf_models.rs  auth_user.rs  auth_user_context.rs  auth_valid_token_pair.rs  lib.rs
functions/authorize/: main.rs
functions/forgot-password/: main.rs
functions/init-mfa/: main.rs
functions/login/: main.rs
functions/logout/: main.rs
functions/refresh/: main.rs
functions/reset-password/: main.rs
functions/sf-delete-old-secrets/: main.rs
functions/sf-update-secrets/: main.rs
functions/sign-up/: main.rs
functions/verify-attr/: main.rs
functions/verify-mfa/: main.rs
src/api/: Cargo.toml  serverless.yml
src/api/forgot-password/: Cargo.toml
src/api/forgot-password/src/: main.rs
src/api/init-mfa/: Cargo.toml  handler.py
src/api/init-mfa/src/: main.rs
src/api/login/: Cargo.toml  handler.py
src/api/login/src/: main.rs
src/api/logout/: Cargo.toml
src/api/logout/src/: main.rs
src/api/refresh/: Cargo.toml
src/api/refresh/src/: main.rs
src/api/reset-password/: Cargo.toml
src/api/reset-password/src/: main.rs
src/api/sign-up/: Cargo.toml  handler.py
src/api/sign-up/src/: main.rs
src/api/verify-attr/: Cargo.toml  handler.py
src/api/verify-attr/src/: main.rs
src/api/verify-mfa/: Cargo.toml
src/api/verify-mfa-code/: handler.py
src/api/verify-mfa/src/: main.rs
src/auth-lib/: Cargo.toml
src/auth-lib/src/: auth_attempt.rs  auth_constants.rs  auth_enums.rs  auth_error.rs  auth_jwt.rs  auth_rbac.rs  auth_sf_models.rs  auth_user.rs  auth_user_context.rs  auth_valid_token_pair.rs  lib.rs
src/db/: serverless.yml
src/funcs/: Cargo.toml  serverless.yml
src/funcs/authorize/: Cargo.toml  handler.py
src/funcs/authorize/src/: main.rs
src/layers/: serverless.yml
src/layers/auth-layer/python/: api_exception.py  auth_attempt.py  auth_constants.py  auth_jwt.py  auth_rbac.py  auth_user.py  auth_valid_token_pair.py  common.py  common_decorators.py  common_marshmallow.py  constants.py  requirements.txt  sensitive_formatter.py
src/sf/: Cargo.toml  serverless.yml
src/sf/sf-delete-old-secrets/: Cargo.toml
src/sf/sf-delete-old-secrets/src/: main.rs
src/sf/sf-update-secrets/: Cargo.toml
src/sf/sf-update-secrets/src/: main.rs
test/common/: mask_sensitive_test.py
