[package]
name = "auth"
description = "Auth microservice that provides authentication and authorization to enhance the security of any web server"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/ii887522/darkord-sls-auth"
publish = false

[lints.rust]
unsafe_code = "forbid"

[profile.dev]
split-debuginfo = "packed"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
split-debuginfo = "packed"
strip = true

[dependencies]
advanced-random-string = { version = "0.1.3", default-features = false }
anyhow = { version = "1.0", default-features = false }
aws-sdk-apigateway = { version = "1.33", default-features = false }
aws-sdk-cloudfront = { version = "1.35", default-features = false }
aws-sdk-dynamodb = { version = "1.27", default-features = false }
aws-sdk-ssm = { version = "1.27", default-features = false }
common = { path = "../darkord-sls-common/src/common" }
futures = { version = "0.3.30", default-features = false }
jsonwebtoken = { version = "9.3", default-features = false }
lambda_runtime = { version = "0.11.2", default-features = false }
magic-crypt = "3.1"
optarg2chain = { version = "0.1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.37", default-features = false, features = ["macros"] }

[dependencies.aws-config]
version = "1.4"
default-features = false
features = ["rt-tokio", "rustls"]

[dependencies.aws_lambda_events]
version = "0.15.1"
default-features = false
features = ["apigw"]

[dependencies.serde_dynamo]
version = "4.2"
default-features = false
features = ["aws-sdk-dynamodb+1"]

[dependencies.totp-rs]
version = "5.5"
default-features = false
features = ["gen_secret", "otpauth"]

[dependencies.uuid]
version = "1.8"
default-features = false
features = ["v4", "fast-rng"]

[dependencies.validator]
version = "0.18.1"
default-features = false
features = ["derive"]

[lib]
name = "auth_lib"
path = "auth-lib/lib.rs"

[[bin]]
name = "authorize"
path = "functions/authorize/main.rs"

[[bin]]
name = "forgot-password"
path = "functions/forgot-password/main.rs"

[[bin]]
name = "init-mfa"
path = "functions/init-mfa/main.rs"

[[bin]]
name = "login"
path = "functions/login/main.rs"

[[bin]]
name = "logout"
path = "functions/logout/main.rs"

[[bin]]
name = "refresh"
path = "functions/refresh/main.rs"

[[bin]]
name = "reset-password"
path = "functions/reset-password/main.rs"

[[bin]]
name = "sf-delete-old-secrets"
path = "functions/sf-delete-old-secrets/main.rs"

[[bin]]
name = "sf-update-secrets"
path = "functions/sf-update-secrets/main.rs"

[[bin]]
name = "sign-up"
path = "functions/sign-up/main.rs"

[[bin]]
name = "verify-attr"
path = "functions/verify-attr/main.rs"

[[bin]]
name = "verify-mfa"
path = "functions/verify-mfa/main.rs"
