[workspace]
resolver = "2"
members = [
  "sign-up",
  "verify-attr",
  "init-mfa",
  "login",
  "verify-mfa",
  "refresh",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
split-debuginfo = "packed"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
split-debuginfo = "packed"
strip = true
