[workspace]
resolver = "2"
members = [
  "sign-up",
  "verify-attr",
  "init-mfa",
  "login",
  "verify-mfa",
  "refresh",
  "logout",
  "forgot-password",
  "reset-password",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
split-debuginfo = "packed"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
split-debuginfo = "packed"
strip = true
