[package]
name = "auth-lib"
edition = "2021"
rust-version = "1.78"

[package.metadata.lambda.build.compiler]
type = "cross"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = "1.0"
aws-sdk-dynamodb = "1.27"
aws-sdk-ssm = "1.27"
common = { path = "../../../darkord-sls-common/src/common" }
magic-crypt = "3.1"
once_cell = "1.19"
optarg2chain = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0"
