[package]
name = "sf-update-secrets"
edition = "2021"
rust-version = "1.78"

[lints]
workspace = true

[dependencies]
advanced-random-string = "0.1.3"
anyhow = "1.0"
auth-lib = { path = "../../auth-lib" }
aws-config = "1.4"
aws-sdk-apigateway = "1.33"
aws-sdk-cloudfront = "1.35"
aws-sdk-dynamodb = "1.27"
aws-sdk-ssm = "1.27"
common = { path = "../../../../darkord-sls-common/src/common" }
lambda_runtime = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros"] }
